2025-10-31  Oliver Kiddle  <opk@zsh.org>

	* 54012: Src/subst.c: fix use of out of scope array variable

	* 54007: Src/exec.c, Src/hist.c, Src/init.c, Src/jobs.c, Src/module.c,
	Src/params.c, Src/signals.c, Src/Zle/complete.c, Src/Zle/zle_misc.c,
	Src/Zle/compresult.c, Src/Zle/zle_keymap.c, Src/Zle/zle_main.c:
	remove some uses of mod_export that were likely unintended

2025-10-27  Bart Schaefer  <schaefer@zsh.org>

	* Dan Drake: 53803: Functions/Prompts/prompt_adam1_setup: make
	adam1 prompt wrap len, ellipsized path elements configurable

2025-10-26  Bart Schaefer  <schaefer@zsh.org>

	* Philippe: 53732: Src/loop.c, Test/A01grammar.ztst: avoid tail-call
	exec in always block

	* Philippe: 53781: Src/params.c, Test/B02typeset.ztst,
	Test/K01nameref.ztst: fix load of autoload variable via a reference

	* Philippe: 53782: Src/params.c, Test/K01nameref.ztst: changes to
	handling of nameref base level: avoid changing base on assignment;
	omit base level for up-scope references; do not follow reference
	chains when computing base level of new references

	* Philippe: 53796: Src/params.c, Test/K01nameref.ztst: fix local
	reference chains and detect self-reference across local scopes

	* Philippe: 53797: Src/params.c, Test/K01nameref.ztst: fix creation
	of undeclared target variable through reference chain

	* Philippe: 53790: Src/builtin.c, Test/K01nameref.ztst,
	Test/V10private.ztst: corrections to reference loop detection

	* Philippe: 53798: Src/params.c, Src/zsh.h, Test/K01nameref.ztst:
	report reference loops created when a reference goes out of scope

	* Philippe: 53676 (test tweaked per 54009): Src/params.c,
	Test/K01nameref.ztst: Revise 52650+51945 to allow assignment to
	global through nameref without looping

2025-10-24  Oliver Kiddle  <opk@zsh.org>

	* 54002: Src/parse.c: silence compiler warning for static function

	* 54001: Src/Zle/zle_keymap.c, Src/exec.c, Src/input.c, Src/jobs.c,
	Src/utils.c: add missing uses of mod_export
